# MARE

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.dox  LICENSE  README.md
inc/: Buffers.hpp  Entity.hpp  Layer.hpp  Mare.hpp  Meshes.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Systems.hpp
inc/Components/: RenderPack.hpp  Rigidbody.hpp  Shadow.hpp  Transform.hpp  Widget.hpp
inc/Entities/: Billboard.hpp  Camera.hpp  Spotlight.hpp
inc/Entities/UI/: Button.hpp  ColorPicker.hpp  Dropdown.hpp  Slider.hpp  Switch.hpp  TextBox.hpp
inc/GL/: GLBuffers.hpp  GLRenderer.hpp  GLShader.hpp
inc/Materials/: BasicColorMaterial.hpp  BasicTextureMaterial.hpp  PhongMaterial.hpp  VertexColorMaterial.hpp
inc/Meshes/: ArrayMesh.hpp  ArrowMesh.hpp  ArrowMesh2D.hpp  CharMesh.hpp  CircleMesh.hpp  ConeMesh.hpp  CubeMesh.hpp  CylinderMesh.hpp  GridMesh.hpp  LineMesh.hpp  QuadrangleMesh.hpp  SlopeMesh.hpp  SphereMesh.hpp  TorusMesh.hpp  TriangleMesh.hpp  TubeMesh.hpp
inc/Systems/Controls/: ControlsSystemForwarder.hpp  FlyControls.hpp  OrbitControls.hpp
inc/Systems/Physics/: EulerMethod.hpp
inc/Systems/Rendering/: PacketRenderer.hpp  RenderSystemForwarder.hpp  ShadowMap.hpp  ShadowRenderer.hpp
inc/app/Entities/: SampleEntity.hpp  SampleParticleSystem.hpp
inc/app/Layers/: SampleUI.hpp  SampleWidgetsLayer.hpp
inc/app/Scenes/: SampleParticleScene.hpp  SampleScene.hpp  SampleShadowScene.hpp  SampleWidgetsScene.hpp
inc/mare/: Application.hpp  Buffer.hpp  Buffers.hpp  Camera.hpp  CompositeMesh.hpp  Controls.hpp  Entity.hpp  GLRenderer.hpp  InstancedMesh.hpp  Layer.hpp  Mare.hpp  MareUtility.hpp  Material.hpp  MaterialFactory.hpp  Mesh.hpp  MeshFactory.hpp  Meshes.hpp  Object.hpp  Overlay.hpp  RenderState.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  SimpleMesh.hpp  Systems.hpp  Texture.hpp  Transform.hpp  Widget.hpp
inc/mare/Components/: RenderPack.hpp  Rigidbody.hpp  Shadow.hpp  Transform.hpp  Widget.hpp
inc/mare/Entities/: Billboard.hpp  Camera.hpp  MareTextObject.hpp  SampleCube.hpp  SampleParticleSystem.hpp  SampleTorus.hpp  Spotlight.hpp  TexturedQuad.hpp
inc/mare/GL/: GLBuffer.hpp  GLBuffers.hpp  GLCompositeMesh.hpp  GLInstancedMesh.hpp  GLMaterial.hpp  GLMaterialFactory.hpp  GLMesh.hpp  GLMeshFactory.hpp  GLRenderState.hpp  GLRenderer.hpp  GLShader.hpp  GLTexture.hpp  VertexArray.hpp
inc/mare/Materials/: BasicMaterial.hpp  BasicTextureMaterial.hpp  PhongMaterial.hpp
inc/mare/Meshes/: ArrayMesh.hpp  ArrowMesh.hpp  CharMesh.hpp  CircleMesh.hpp  ConeMesh.hpp  (+8 more)
src/: Buffers.cpp  Mare.cpp  Meshes.cpp  Renderer.cpp  Shader.cpp
src/GL/: GLBuffers.cpp  GLRenderer.cpp  GLShader.cpp
src/app/: main.cpp
src/mare/: Application.cpp  Buffer.cpp  Buffers.cpp  Camera.cpp  CompositeMesh.cpp  Controls.cpp  GLRenderer.cpp  InstancedMesh.cpp  Layer.cpp  Mare.cpp  MareUtility.cpp  Material.cpp  Mesh.cpp  Meshes.cpp  Object.cpp  Overlay.cpp  RenderState.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SimpleMesh.cpp  Transform.cpp  Widget.cpp
(+72 files in other folders)
